Feat: jwt token

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.1",
+    "@mantine/dates": "^5.10.2",
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
+    "@mantine/modals": "^5.10.2",
+    "@mantine/notifications": "^5.10.2",
     "@tanstack/react-query": "^4.22.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,9 +20,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.2.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "rouper-navigation": "^1.1.0",
     "typescript": "^4.4.2",
